--- a/back/package.json
+++ b/back/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "init_db": "tsx --env-file=.env src/db.ts",
     "start_api": "tsx --env-file=.env --watch src/api/index.ts",
-    "test": "jest"
+    "test": "jest",
+    "prepare": "husky"
   },
   "author": "",
   "license": "ISC",
@@ -14,12 +15,13 @@
   "devDependencies": {
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
+    "@types/jsonwebtoken": "^9.0.9",
     "express": "^4.21.2",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.6",
     "tsx": "^4.19.2",
-    "typescript": "^5.8.2",
-    "@types/jsonwebtoken": "^9.0.9"
+    "typescript": "^5.8.2"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
