--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "cd ./back && npm run test",
     "start_api": "cd ./back && npm run start_api",
     "start_front": "cd ./front && npm run dev",
     "init_api": "cd ./back && npm i",
     "init_front": "cd ./front && npm i",
     "init_core": "npm i",
     "init_application": "npm run init_core && npm run init_api && npm run init_front",
-    "start": "concurrently \"npm run start_api\" \"npm run start_front\""
+    "start": "concurrently \"npm run start_api\" \"npm run start_front\"",
+    "prepare": "husky"
   },
   "author": "",
   "license": "ISC",
