--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "init_front": "cd ./front && npm i",
     "init_core": "npm i",
     "init_application": "npm run init_core && npm run init_api && npm run init_front",
-    "start": "concurrently \"npm run start_api\" \"npm run start_front\"",
-    "prepare": "husky"
+    "start": "concurrently \"npm run start_api\" \"npm run start_front\""
   },
   "author": "",
   "license": "ISC",
