--- a/back/package.json
+++ b/back/package.json
@@ -12,6 +12,7 @@
     "license": "ISC",
     "description": "",
     "devDependencies": {
+        "@types/bcrypt": "^5.0.2",
         "@types/express": "^5.0.0",
         "@types/jest": "^29.5.14",
         "@types/jsonwebtoken": "^9.0.9",
