--- a/back/package.json
+++ b/back/package.json
@@ -12,20 +12,27 @@
     "license": "ISC",
     "description": "",
     "devDependencies": {
+        "@asteasolutions/zod-to-openapi": "^7.3.0",
         "@types/bcrypt": "^5.0.2",
         "@types/express": "^5.0.0",
         "@types/jest": "^29.5.14",
         "@types/jsonwebtoken": "^9.0.9",
+        "@types/swagger-jsdoc": "^6.0.4",
+        "@types/swagger-ui-express": "^4.1.8",
         "express": "^4.21.2",
         "jest": "^29.7.0",
         "ts-jest": "^29.2.6",
         "tsx": "^4.19.2",
-        "typescript": "^5.8.2"
+        "typescript": "^5.8.2",
+        "@types/cors": "^2.8.17"
     },
     "dependencies": {
         "bcrypt": "^5.1.1",
         "cors": "^2.8.5",
         "jsonwebtoken": "^9.0.2",
-        "sqlite3": "^5.1.7"
+        "sqlite3": "^5.1.7",
+        "swagger-jsdoc": "^6.2.8",
+        "swagger-ui-express": "^5.0.1",
+        "zod": "^3.24.2"
     }
 }
